k8s/idp/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: platform
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak-db
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db
  namespace: platform
spec:
  serviceName: "keycloak-db"
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: thor
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: keycloak-db-pvc
